@@ -1,3 +1,10 @@
+2021-06-02  Werner Lemberg  <wl@gnu.org>
+
+	[psaux] Fix MSVC compiler warnings.
+
+	* src/psaux/afmparse.c (afm_parse_track_kern, afm_parse_kern_pairs):
+	Add cast.
+
 2021-05-29  Werner Lemberg  <wl@gnu.org>
 
 	Fix compilation errors and (some) warnings for clang++.
